Fix overflow in the title of the saved book

--- a/pruebas/01-reading-list/danmondra/src/styles/main.module.css
+++ b/pruebas/01-reading-list/danmondra/src/styles/main.module.css
@@ -731,6 +731,11 @@
 
 .savedBookHeader h3 {
   font-size: 1.6rem;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
   overflow-wrap: anywhere;
 }
 
